# zbase

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
assets/macos/: AppIcon.icns
scripts/: release.sh
scripts/macos/: build_app_bundle.sh
src/: main.rs
src/app/: actions.rs  assets.rs  bootstrap.rs  commands.rs  mod.rs  theme.rs  window.rs
src/domain/: affinity.rs  attachment.rs  backend.rs  call.rs  channel_details.rs  conversation.rs  ids.rs  message.rs  mod.rs  pins.rs  presence.rs  profile.rs  route.rs  search.rs  user.rs
src/models/: app_model.rs  call_model.rs  composer_model.rs  conversation_model.rs  emoji_picker_model.rs  file_upload_model.rs  find_in_chat_model.rs  mod.rs  navigation_model.rs  new_chat_model.rs  notifications_model.rs  overlay_model.rs  profile_panel_model.rs  quick_switcher_model.rs  search_model.rs  settings_model.rs  sidebar_model.rs  thread_pane_model.rs  timeline_model.rs  workspace_model.rs
src/services/: draft_store.rs  media_service.rs  mod.rs  notifications_service.rs  og_service.rs  search_service.rs  settings_store.rs  sync_service.rs  uploads_service.rs
src/services/backends/: mod.rs  router.rs  traits.rs
src/services/local_store/: mod.rs  paths.rs  rocks.rs  schema.rs
src/services/search_index/: mod.rs
src/state/: action.rs  bindings.rs  effect.rs  event.rs  ids.rs  mod.rs  reducer.rs  state.rs  store.rs
src/util/: async_load.rs  autocomplete_detect.rs  debounce.rs  deep_link.rs  formatting.rs  fuzzy.rs  interactive_qos.rs  mod.rs  perf_harness.rs  video_decoder.rs
src/views/: app_window.rs  code_highlight.rs  inline_markdown.rs  mod.rs  selectable_text.rs
src/views/avatar/: mod.rs
src/views/calls/: mod.rs
src/views/composer/: mod.rs
src/views/conversation/: mod.rs
src/views/home/: mod.rs
src/views/inbox/: mod.rs
src/views/input/: mod.rs
src/views/main_panel/: mod.rs
src/views/overlays/: emoji_picker.rs  mod.rs  new_chat.rs
src/views/preferences/: mod.rs
src/views/profile/: mod.rs
src/views/rail/: mod.rs
tests/: keybase_notify_inventory.rs
(+23 files in other folders)
