[package]
name = "zbase"
version = "1.0.12"
edition = "2024"
default-run = "zbase"

[package.metadata.bundle]
name = "zBase"
identifier = "com.zbase.app"
icon = ["assets/macos/AppIcon.icns"]

[dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
unicode-segmentation = "1.12.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rmpv = "1"
rocksdb = "0.22"
tantivy = "0.22"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
emojis = "0.8.0"
ffmpeg-next = "8"
image = "0.25"
sha2 = "0.10.9"
chrono = "0.4.44"
rust-embed = "8"
tree-sitter = "0.26.6"
tree-sitter-highlight = "0.26.6"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-bash = "0.25.1"
tree-sitter-go = "0.25.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-sequel = "0.3.11"
